# ambientdata-mcp

./: README.ja.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  release.yml
src/ambient_mcp/: client.py  models.py  server.py  transformers.py
tests/: test_client.py  test_models.py  test_server.py  test_transformers.py
